# DISCO

./: .gitignore  README.md  pyproject.toml
docs/: schema.drawio
resources/: config.yml  copenhagen.geojson  synthetic.gpkg
workflow/: Mapping.qgz  Snakefile
workflow/envs/: osmium.yml
workflow/notebooks/: Aggregate flows.ipynb  Assign network nodes.ipynb  Create flow network.ipynb  Create hexagons.ipynb  Create stop grid.ipynb  Generate operator.ipynb  Prepare network.ipynb  Route trajectories.ipynb
